--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "latest",
+    "query-string": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "0.9.5",
+    "react-highlight-words": "^0.16.0",
     "react-router-dom": "latest",
-    "query-string": "latest",
-    "history": "latest"
+    "react-scripts": "0.9.5"
   },
   "devDependencies": {},
   "scripts": {
